fix(avo-1724): re-enable previous and next buttons + fix cue point jump

--- a/src/components/FlowPlayer/FlowPlayer.scss
+++ b/src/components/FlowPlayer/FlowPlayer.scss
@@ -489,6 +489,7 @@ $c-video-player-progress-inner-bg: $color-teal-bright;
 					position: absolute;
 					bottom: 0;
 					height: 2rem;
+					width: 1.005%;
 					border: 0;
 					background-color: $color-teal-bright;
 					margin: 0;
